/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/db";
option java_package = "cn.aberic.george.protocols.db";
option java_outer_classname = "DatabaseProto";

package db;

import "timestamp.proto";
import "view.proto";
import "response.proto";

// 数据库
message Database {
  // 名称
  string name = 1;
  // 描述
  string comment = 2;
  // 创建时间
  comm.Timestamp create_time = 3;
  // 视图集合
  repeated View views = 4;
}

// 数据库集合
message DatabaseList {
  repeated Database databases = 1;
}

// 请求新建数据库
message RequestDatabaseCreate {
  // 名称
  string name = 1;
  // 描述
  string comment = 2;
}

// 请求变更数据库
message RequestDatabaseModify {
  // 名称
  string name = 1;
  // 新名称
  string name_new = 2;
  // 描述
  string comment = 3;
}

// 请求数据库信息
message RequestDatabaseInfo {
  string name = 1;
}

// 请求数据库信息
message ResponseDatabaseInfo {
  comm.Status status = 1;
  string msg_err = 2;
  Database database = 3;
}

// 请求数据库信息删除
message RequestDatabaseRemove {
  string name = 1;
}
